# Augment-BYOK-Proxy

./: .gitignore  Cargo.toml  README.md  augment.html  config.example.yaml
.github/workflows/: build.yml  manual-build.yml  release-proxy.yml
scripts/: repack_vsix.py
src/: anthropic.rs  config.rs  convert.rs  history_summary_auto.rs  main.rs  openai.rs  protocol.rs
vsix-patch/: byok-proxy-auth-header-inject.js  byok-proxy-panel-inject.js
