[package]
name = "augment-byok-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_yaml = "0.9"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
pretty_assertions = "1"
